Изменил view,test, также docker-compose и dockerfile